[gd_scene load_steps=6 format=3 uid="uid://c41isr8xlbop6"]

[ext_resource type="Script" uid="uid://bseosrshbbw8l" path="res://customization_ui.gd" id="1_guqlq"]
[ext_resource type="Texture2D" uid="uid://dlf2gqdw6fd4x" path="res://assets UI/ui_testback.png" id="2_m3lcr"]
[ext_resource type="Texture2D" uid="uid://b8ca11g7e5ngn" path="res://assets UI/Modern_UI_Style_1.png" id="3_wl8gf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m3lcr"]
texture = ExtResource("2_m3lcr")
region_rect = Rect2(6.79329, 6.33795, 92.605, 61.3878)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mytjh"]
texture = ExtResource("3_wl8gf")
region_rect = Rect2(60.0059, 300.085, 23.955, 24.8149)

[node name="CustomizationUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 266.0
offset_top = 86.0
offset_right = 266.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_guqlq")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -791.0
offset_top = -403.0
offset_right = 266.475
offset_bottom = 212.05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m3lcr")

[node name="PreviewPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -36.0
offset_top = 105.0
offset_right = 203.14
offset_bottom = 360.69
theme_override_styles/panel = SubResource("StyleBoxTexture_mytjh")

[node name="PreviewCharacter" type="Node2D" parent="PreviewPanel"]
position = Vector2(119.495, 125.36)
scale = Vector2(6, 6)

[node name="BodySprite" type="AnimatedSprite2D" parent="PreviewPanel/PreviewCharacter"]
z_index = 1

[node name="OutfitSprite" type="AnimatedSprite2D" parent="PreviewPanel/PreviewCharacter"]
z_index = 2

[node name="HairSprite" type="AnimatedSprite2D" parent="PreviewPanel/PreviewCharacter"]
z_index = 3

[node name="EyesSprite" type="AnimatedSprite2D" parent="PreviewPanel/PreviewCharacter"]
z_index = 4

[node name="PlayerNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 61.0
offset_right = 135.0
offset_bottom = 84.0
text = "NAME PLAYER"

[node name="CategoryButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -63.0
offset_top = 383.0
offset_right = -23.0
offset_bottom = 423.0

[node name="BodyButton" type="TextureButton" parent="CategoryButtons"]
layout_mode = 2
